Activate an unsnappable window should end both splitview and overview.

Bug: 880959
Change-Id: I87d4d222ea3b748171624846bfade66cca994a1b
Reviewed-on: https://chromium-review.googlesource.com/1208145
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589181}
Former-commit-id: b835d9c06e791f15255eb497ea88406874b3fd4f